[gd_scene load_steps=4 format=3 uid="uid://byoajovxpdas6"]

[ext_resource type="Script" path="res://scripts/clearUI.gd" id="1_638qq"]
[ext_resource type="Theme" uid="uid://eu3yjnjsv0w0" path="res://resources/theme.tres" id="2_yxqlp"]
[ext_resource type="AudioStream" uid="uid://cw1c5vsjhg4rn" path="res://assets/audio/goal2.wav" id="3_el8q1"]

[node name="clearUI" type="VBoxContainer"]
process_mode = 3
z_index = 8
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_638qq")

[node name="levelBeat" type="RichTextLabel" parent="."]
layout_mode = 2
theme = ExtResource("2_yxqlp")
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Level X Cleared![/center]"
fit_content = true

[node name="timeBeat" type="RichTextLabel" parent="."]
layout_mode = 2
theme = ExtResource("2_yxqlp")
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]Time: 0:00[/center]"
fit_content = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme = ExtResource("2_yxqlp")
text = "Continue"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_el8q1")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
